# titanury

./: CMakeLists.txt
.github/workflows/: release.yml
cmake/: TitanEngine.cmake  cxxopts.cmake  ntdll.cmake
cmake/TitanEngine/: TitanEngine.h  TitanEngine.hpp
lib/: kernel_object.cpp  kernel_object.h  titanscript.cpp  transcript.h
src/attachProcess/: main.cpp
src/dec2hex/: main.cpp
src/filecmp/: main.cpp
src/hex2dec/: main.cpp
src/listkernelobject/: main.cpp
src/loadDLL/: main.cpp
src/lookMemory/: main.cpp
src/setHWBP/: main.cpp
src/udprecv/: main.cpp
src/udpsend/: main.cpp
test/: hello.cpp
